--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,9 @@
 {
+    "name": "monolog/monolog",
+    "description": "Strong Typing PHP",
+    "type": "library",
+    "license": "MIT",
     "autoload": {
-        "psr-0": { "StrongTyping": "/strongtyping/src" }
+        "psr-0": {"StrongTyping": "src/"}
     }
 }
