--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "monolog/monolog",
+    "name": "strongtyping",
     "description": "Strong Typing PHP",
     "type": "library",
     "license": "MIT",
